# dpa

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  bootstrap.bat  bootstrap.sh
cmake/: FindScoreP.cmake
include/dpa/: pipeline.hpp
include/dpa/benchmark/: benchmark.hpp
include/dpa/detach/: detach.hpp  detach_boost_extensions.hpp
include/dpa/math/: indexing.hpp  linear_interpolation.hpp  permute_for.hpp  prime_factorization.hpp
include/dpa/stages/: argument_parser.hpp  cartesian_grid_loader.hpp  color_generator.hpp  critical_point_classifier.hpp  domain_partitioner.hpp  ftle_estimator.hpp  index_generator.hpp  integral_curve_saver.hpp  particle_advector.hpp  point_cloud_saver.hpp  regular_grid_loader.hpp  regular_grid_saver.hpp  uniform_seed_generator.hpp
include/dpa/types/: arguments.hpp  basic_types.hpp  cartesian_grid.hpp  fields.hpp  integral_curves.hpp  integrators.hpp  particle.hpp  point_cloud.hpp  regular_fields.hpp  regular_grid.hpp  relative_direction.hpp
include/dpa/utility/: eigen.hpp  mpi.hpp  multi_array.hpp  xdmf.hpp
source/: main.cpp  pipeline.cpp
source/detach/: detach.cpp
source/stages/: argument_parser.cpp  cartesian_grid_loader.cpp  color_generator.cpp  critical_point_classifier.cpp  domain_partitioner.cpp  ftle_estimator.cpp  index_generator.cpp  integral_curve_saver.cpp  particle_advector.cpp  point_cloud_saver.cpp  regular_grid_loader.cpp  regular_grid_saver.cpp  uniform_seed_generator.cpp
utility/benchmarks/load_balancing/: astro_1024_n_16_l_const_d_0.5_s_2,2,2.h5.benchmark.csv  astro_1024_n_16_l_gllma_d_0.5_s_2,2,2.h5.benchmark.csv  astro_1024_n_16_l_lma_d_0.5_s_2,2,2.h5.benchmark.csv  astro_1024_n_16_l_none_d_0.5_s_2,2,2.h5.benchmark.csv  astro_1024_n_64_l_const_d_0.5_s_2,2,2.h5.benchmark.csv  astro_1024_n_64_l_gllma_d_0.5_s_2,2,2.h5.benchmark.csv  astro_1024_n_64_l_lma_d_0.5_s_2,2,2.h5.benchmark.csv  astro_1024_n_64_l_none_d_0.5_s_2,2,2.h5.benchmark.csv  fishtank_1024_n_16_l_const_d_0.5_s_2,2,2.h5.benchmark.csv  fishtank_1024_n_16_l_gllma_d_0.5_s_2,2,2.h5.benchmark.csv  fishtank_1024_n_16_l_lma_d_0.5_s_2,2,2.h5.benchmark.csv  fishtank_1024_n_16_l_none_d_0.5_s_2,2,2.h5.benchmark.csv  fusion_1024_n_16_l_const_d_0.5_s_2,2,2.h5.benchmark.csv  fusion_1024_n_16_l_gllma_d_0.5_s_2,2,2.h5.benchmark.csv  fusion_1024_n_16_l_lma_d_0.5_s_2,2,2.h5.benchmark.csv  fusion_1024_n_16_l_none_d_0.5_s_2,2,2.h5.benchmark.csv  fusion_1024_n_64_l_const_d_0.5_s_2,2,2.h5.benchmark.csv  fusion_1024_n_64_l_gllma_d_0.5_s_2,2,2.h5.benchmark.csv  fusion_1024_n_64_l_lma_d_0.5_s_2,2,2.h5.benchmark.csv  fusion_1024_n_64_l_none_d_0.5_s_2,2,2.h5.benchmark.csv
utility/benchmarks/strong_scaling/: astro_1024_n_128_l_const_d_1.0_s_4,4,4.h5.benchmark.csv  astro_1024_n_128_l_gllma_d_1.0_s_4,4,4.h5.benchmark.csv  astro_1024_n_128_l_lma_d_1.0_s_4,4,4.h5.benchmark.csv  astro_1024_n_128_l_none_d_1.0_s_4,4,4.h5.benchmark.csv  astro_1024_n_16_l_const_d_1.0_s_4,4,4.h5.benchmark.csv  astro_1024_n_16_l_gllma_d_1.0_s_4,4,4.h5.benchmark.csv  astro_1024_n_16_l_lma_d_1.0_s_4,4,4.h5.benchmark.csv  astro_1024_n_16_l_none_d_1.0_s_4,4,4.h5.benchmark.csv  astro_1024_n_32_l_const_d_1.0_s_4,4,4.h5.benchmark.csv  astro_1024_n_32_l_gllma_d_1.0_s_4,4,4.h5.benchmark.csv  astro_1024_n_32_l_lma_d_1.0_s_4,4,4.h5.benchmark.csv  astro_1024_n_32_l_none_d_1.0_s_4,4,4.h5.benchmark.csv  astro_1024_n_64_l_const_d_1.0_s_4,4,4.h5.benchmark.csv  astro_1024_n_64_l_gllma_d_1.0_s_4,4,4.h5.benchmark.csv  astro_1024_n_64_l_lma_d_1.0_s_4,4,4.h5.benchmark.csv  astro_1024_n_64_l_none_d_1.0_s_4,4,4.h5.benchmark.csv  fishtank_1024_n_128_l_const_d_1.0_s_4,4,4.h5.benchmark.csv  fishtank_1024_n_128_l_gllma_d_1.0_s_4,4,4.h5.benchmark.csv  fishtank_1024_n_128_l_lma_d_1.0_s_4,4,4.h5.benchmark.csv  fishtank_1024_n_128_l_none_d_1.0_s_4,4,4.h5.benchmark.csv  fishtank_1024_n_16_l_const_d_1.0_s_4,4,4.h5.benchmark.csv  fishtank_1024_n_16_l_gllma_d_1.0_s_4,4,4.h5.benchmark.csv  fishtank_1024_n_16_l_lma_d_1.0_s_4,4,4.h5.benchmark.csv  fishtank_1024_n_16_l_none_d_1.0_s_4,4,4.h5.benchmark.csv  fishtank_1024_n_32_l_const_d_1.0_s_4,4,4.h5.benchmark.csv  fishtank_1024_n_32_l_gllma_d_1.0_s_4,4,4.h5.benchmark.csv  fishtank_1024_n_32_l_lma_d_1.0_s_4,4,4.h5.benchmark.csv  fishtank_1024_n_32_l_none_d_1.0_s_4,4,4.h5.benchmark.csv  fishtank_1024_n_64_l_const_d_1.0_s_4,4,4.h5.benchmark.csv  fishtank_1024_n_64_l_gllma_d_1.0_s_4,4,4.h5.benchmark.csv  fishtank_1024_n_64_l_lma_d_1.0_s_4,4,4.h5.benchmark.csv  fishtank_1024_n_64_l_none_d_1.0_s_4,4,4.h5.benchmark.csv  fusion_1024_n_128_l_const_d_1.0_s_4,4,4.h5.benchmark.csv  fusion_1024_n_128_l_gllma_d_1.0_s_4,4,4.h5.benchmark.csv  fusion_1024_n_128_l_lma_d_1.0_s_4,4,4.h5.benchmark.csv  fusion_1024_n_128_l_none_d_1.0_s_4,4,4.h5.benchmark.csv  fusion_1024_n_16_l_const_d_1.0_s_4,4,4.h5.benchmark.csv  fusion_1024_n_16_l_gllma_d_1.0_s_4,4,4.h5.benchmark.csv  fusion_1024_n_16_l_lma_d_1.0_s_4,4,4.h5.benchmark.csv  fusion_1024_n_16_l_none_d_1.0_s_4,4,4.h5.benchmark.csv  (+8 more)
utility/benchmarks/weak_scaling/: astro_1024_n_128_l_const_d_1.0_s_4,4,4.h5.benchmark.csv  astro_1024_n_128_l_gllma_d_1.0_s_4,4,4.h5.benchmark.csv  astro_1024_n_128_l_lma_d_1.0_s_4,4,4.h5.benchmark.csv  astro_1024_n_128_l_none_d_1.0_s_4,4,4.h5.benchmark.csv  astro_1024_n_16_l_const_d_1.0_s_8,8,8.h5.benchmark.csv  astro_1024_n_16_l_gllma_d_1.0_s_8,8,8.h5.benchmark.csv  astro_1024_n_16_l_lma_d_1.0_s_8,8,8.h5.benchmark.csv  astro_1024_n_16_l_none_d_1.0_s_8,8,8.h5.benchmark.csv  astro_1024_n_32_l_const_d_1.0_s_8,8,4.h5.benchmark.csv  astro_1024_n_32_l_gllma_d_1.0_s_8,8,4.h5.benchmark.csv  astro_1024_n_32_l_lma_d_1.0_s_8,8,4.h5.benchmark.csv  astro_1024_n_32_l_none_d_1.0_s_8,8,4.h5.benchmark.csv  astro_1024_n_64_l_const_d_1.0_s_8,4,4.h5.benchmark.csv  (+35 more)
utility/configs/: test_config.json
utility/python/: barplot_formsinglecsv_dirki.py  benchmark_generator.py  benchmark_parser.py  figure_generator.py  heatmap.py  illustration.py  install_dependencies.bat  plot_generator.py  plot_generator_load_balancing.py  plot_generator_scaling.py  readme.txt
utility/shell/: gather_benchmarks.sh  load_claix_modules.sh  setup_claix.sh
(+634 files in other folders)
